--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <title>Delícia Gourmet – Calendário de Reservas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <style>
-:root {
+:root{
   --bg:#0b0f19;--card:#151b28;--gold:#d4af37;--accent:#b8860b;
   --text:#f8fafc;--muted:#a5b1c2;--red:#ef4444;--green:#22c55e;
   --radius:18px;
 }
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{
-  height:100%;background:var(--bg);font-family:'Inter',sans-serif;
-  color:var(--text);display:flex;flex-direction:column;overflow:hidden;
-}
+html,body{height:100%;background:var(--bg);font-family:'Inter',sans-serif;color:var(--text);display:flex;flex-direction:column;overflow:hidden;}
 header{text-align:center;padding:20px 0 10px;background:linear-gradient(180deg,rgba(212,175,55,.12),transparent);box-shadow:0 3px 15px rgba(0,0,0,.4);}
 header h1{font-family:'Playfair Display',serif;font-size:2rem;color:var(--gold);}
 header p{color:var(--muted);font-size:1rem}
@@ -25,28 +22,27 @@ header p{color:var(--muted);font-size:1rem}
 .calendar-header button{background:none;border:none;color:var(--gold);font-size:2rem;cursor:pointer;}
 .weekdays,.days{display:grid;grid-template-columns:repeat(7,1fr);gap:14px;text-align:center;}
 .weekdays div{color:var(--muted);font-weight:600;text-transform:uppercase;font-size:.85rem;}
-.day{background:var(--card);border:1px solid rgba(255,255,255,.05);border-radius:var(--radius);
-  min-height:120px;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
-  padding:10px;transition:.25s;cursor:pointer;}
+.day{background:var(--card);border:1px solid rgba(255,255,255,.05);border-radius:var(--radius);min-height:120px;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:10px;cursor:pointer;transition:.25s;}
 .day:hover{transform:translateY(-3px);border-color:var(--gold);box-shadow:0 0 20px rgba(212,175,55,.25);}
 .day.reservado{background:#fff;color:#000;font-weight:600;animation:pulse 1.8s infinite;}
-.day.reservado .nomes{margin-top:4px;font-size:.8rem;line-height:1.1rem;color:#000;font-weight:500;}
+.day.reservado .nomes{margin-top:4px;font-size:.8rem;color:#000;}
 @keyframes pulse{0%{box-shadow:0 0 0 rgba(255,255,255,.3);}50%{box-shadow:0 0 20px rgba(255,255,255,.7);}100%{box-shadow:0 0 0 rgba(255,255,255,.3);}}
-#modal{position:fixed;inset:0;background:rgba(0,0,0,.8);display:none;align-items:center;justify-content:center;z-index:99;padding:20px;}
+#modal{position:fixed;inset:0;background:rgba(0,0,0,.85);display:none;align-items:center;justify-content:center;z-index:99;padding:20px;}
 #modal.show{display:flex;}
-.modal-content{background:var(--card);border:1px solid var(--gold);border-radius:var(--radius);
-  padding:25px 35px;width:90%;max-width:850px;max-height:85vh;overflow-y:auto;box-shadow:0 0 60px rgba(212,175,55,.25);}
+.modal-content{background:var(--card);border:1px solid var(--gold);border-radius:var(--radius);padding:25px 35px;width:90%;max-width:850px;max-height:85vh;overflow-y:auto;box-shadow:0 0 60px rgba(212,175,55,.25);}
 .modal-content h3{text-align:center;color:var(--gold);font-family:'Playfair Display',serif;font-size:1.4rem;margin-bottom:20px;}
 .reserva-item{background:var(--bg);border:1px solid rgba(212,175,55,.3);border-radius:12px;padding:16px;margin-bottom:14px;}
 .reserva-item strong{color:var(--gold);font-size:1.1rem;}
-.reserva-item span{display:block;margin-top:6px;font-size:.95rem;color:var(--muted);}
-.btn-whats{display:inline-block;background:linear-gradient(90deg,#25D366,#128C7E);color:#fff;text-decoration:none;padding:8px 14px;border-radius:8px;font-weight:600;margin-top:10px;}
-.close-btn,.edit-btn{display:block;margin:18px auto 0;border-radius:10px;padding:10px 20px;font-weight:600;cursor:pointer;}
-.edit-btn{background:var(--accent);color:#fff;border:none;}
-.close-btn{background:none;border:1px solid var(--muted);color:var(--muted);}
+.reserva-item span{display:block;margin-top:4px;font-size:.95rem;color:var(--muted);}
+.btn{border:none;border-radius:8px;padding:8px 14px;margin-top:8px;cursor:pointer;font-weight:600}
+.btn-edit{background:var(--accent);color:#fff}
+.btn-del{background:var(--red);color:#fff;margin-left:6px}
+.close-btn{display:block;margin:18px auto 0;background:none;border:1px solid var(--muted);color:var(--muted);border-radius:10px;padding:8px 18px;cursor:pointer;}
 #overlay{position:fixed;inset:0;background:rgba(11,15,25,.95);display:flex;flex-direction:column;align-items:center;justify-content:center;color:var(--gold);z-index:999;}
 .loader{border:5px solid rgba(255,255,255,.1);border-top:5px solid var(--gold);border-radius:50%;width:60px;height:60px;animation:spin 1s linear infinite;margin-bottom:20px;}
 @keyframes spin{to{transform:rotate(360deg)}}
+.success{color:var(--green);font-size:1.3rem;animation:fadeOut 2s forwards;}
+@keyframes fadeOut{0%{opacity:1;}90%{opacity:1;}100%{opacity:0;}}
 @media(max-width:900px){.calendar{padding:10px;}.day{min-height:90px;}.modal-content{width:95%;padding:20px;}}
 </style>
 </head>
@@ -71,53 +67,55 @@ header p{color:var(--muted);font-size:1rem}
   <div class="modal-content">
     <h3 id="modalDate">Reservas do dia</h3>
     <div id="reservasList"></div>
-    <button class="edit-btn" id="editarBtn">Editar / Excluir</button>
     <button class="close-btn" id="closeModal">Fechar</button>
   </div>
 </div>
 
 <script>
-const GAS_ENDPOINT="https://script.google.com/macros/s/AKfycbxFJHYGRF0B5Wj49z6FIzpvtng2bi5mG47_-V4v3PnTY3U4uL1ou8JmIKw-dRvlCwonow/exec";
+const GAS_ENDPOINT="https://script.google.com/macros/s/AKfycbxGIXO0Kt7Sq8Sev4r97vw_0sSClz3WfHX-0P7ENxC7lvGfe9XDiD_g_uYo3eFkYzAgIA/exec";
 const ADMIN_SENHA="8486";
 let reservas=[],currentDate=new Date();
 const daysContainer=document.getElementById("days"),monthYear=document.getElementById("monthYear"),
 modal=document.getElementById("modal"),reservasList=document.getElementById("reservasList"),
 modalDate=document.getElementById("modalDate"),closeModal=document.getElementById("closeModal"),
-overlay=document.getElementById("overlay"),editarBtn=document.getElementById("editarBtn");
+overlay=document.getElementById("overlay");
 
-/* ====== CARREGAR ====== */
+/* === Carregar Reservas === */
 async function carregarReservas(){
   overlay.style.display="flex";
   try{
     const res=await fetch(GAS_ENDPOINT+"?acao=listarReservas");
     reservas=await res.json();
-    overlay.style.display="none";
     renderCalendar();
-  }catch(e){overlay.innerHTML="<div style='color:red'>❌ "+e.message+"</div>";}
+  }catch(e){
+    overlay.innerHTML="<div style='color:red'>Erro: "+e.message+"</div>";
+  }
+  overlay.style.display="none";
 }
 
-/* ====== CALENDÁRIO ====== */
+/* === Renderizar Calendário === */
 function renderCalendar(){
   const y=currentDate.getFullYear(),m=currentDate.getMonth();
   const first=new Date(y,m,1),last=new Date(y,m+1,0);
-  const months=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
-  monthYear.textContent=`${months[m]} ${y}`;daysContainer.innerHTML="";
+  const meses=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
+  monthYear.textContent=`${meses[m]} ${y}`;daysContainer.innerHTML="";
   for(let i=0;i<first.getDay();i++)daysContainer.innerHTML+="<div></div>";
   for(let d=1;d<=last.getDate();d++){
-    const date=`${y}-${String(m+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
-    const list=reservas.filter(r=>r.data===date);
-    const el=document.createElement("div");el.classList.add("day");
+    const data=`${y}-${String(m+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
+    const list=reservas.filter(r=>r.data===data);
+    const el=document.createElement("div");
+    el.classList.add("day");
     el.innerHTML=`<div class='num'>${d}</div>`;
     if(list.length>0){
       el.classList.add("reservado");
       el.innerHTML+=`<div class="nomes">${list.map(r=>r.nome.split(" ")[0]).slice(0,3).join(", ")}${list.length>3?"...":""}</div>`;
-      el.onclick=()=>abrirModal(date,list);
+      el.onclick=()=>abrirModal(data,list);
     }
     daysContainer.appendChild(el);
   }
 }
 
-/* ====== MODAL ====== */
+/* === Modal === */
 function abrirModal(data,list){
   const dataFormatada=new Date(data).toLocaleDateString("pt-BR",{weekday:"long",day:"2-digit",month:"long"});
   modalDate.textContent=dataFormatada;
@@ -135,8 +133,8 @@ function abrirModal(data,list){
         <span>📞 Contato: ${r.contato||"-"}</span>
         <span>📧 E-mail: ${r.email||"-"}</span>
         <span>📅 Status: ${r.status||"-"}</span>
-        <button style="margin-top:8px;background:#b8860b;color:white;border:none;border-radius:6px;padding:6px 12px;cursor:pointer" onclick="editar(${i},'${data}')">Editar</button>
-        <button style="margin-left:6px;background:#b91c1c;color:white;border:none;border-radius:6px;padding:6px 12px;cursor:pointer" onclick="excluir('${data}','${r.nome}')">Excluir</button>
+        <button class='btn btn-edit' onclick="editar('${data}','${r.nome}','${i}')">Editar</button>
+        <button class='btn btn-del' onclick="excluir('${data}','${r.nome}')">Excluir</button>
       </div>`;
   });
   modal.dataset.data=data;
@@ -144,46 +142,50 @@ function abrirModal(data,list){
 }
 closeModal.onclick=()=>modal.classList.remove("show");
 
-/* ====== EDITAR ====== */
-function editar(i,data){
-  const senha=prompt("Digite a senha de administrador:");
-  if(senha!==ADMIN_SENHA){alert("Senha incorreta.");return;}
-  const r=reservas.filter(x=>x.data===data)[i];
+/* === Edição === */
+function editar(data,nome,index){
+  const senha=prompt("Senha de administrador:");
+  if(senha!==ADMIN_SENHA)return alert("Senha incorreta.");
+  const r=reservas.filter(x=>x.data===data && x.nome===nome)[0];
   reservasList.innerHTML=`
     <div class='reserva-item'>
       <label>Nome:<input id='nome' value='${r.nome}'></label><br>
       <label>Horário:<input id='hora' value='${r.horario||""}'></label><br>
       <label>Pessoas:<input id='pessoas' value='${r.pessoas||""}'></label><br>
       <label>Mesa:<input id='mesa' value='${r.mesa||""}'></label><br>
-      <button onclick="salvar('${data}','${r.nome}')">Salvar</button>
+      <button class='btn btn-edit' onclick="salvar('${data}','${r.nome}')">Salvar</button>
     </div>`;
 }
 
 async function salvar(data,nomeAntigo){
-  overlay.style.display="flex";overlay.innerHTML="<div class='loader'></div><div>Salvando...</div>";
+  overlay.innerHTML="<div class='loader'></div><div>Salvando...</div>";
+  overlay.style.display="flex";
   const nome=document.getElementById("nome").value,horario=document.getElementById("hora").value,
         pessoas=document.getElementById("pessoas").value,mesa=document.getElementById("mesa").value;
   const payload={acao:"editarReserva",senha:ADMIN_SENHA,data,nomeAntigo,nome,horario,pessoas,mesa};
   const res=await fetch(GAS_ENDPOINT,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
-  const json=await res.json();alert(json.mensagem||"Alteração salva!");
-  overlay.style.display="none";carregarReservas();modal.classList.remove("show");
+  const json=await res.json();
+  overlay.innerHTML=`<div class='success'>${json.mensagem||"✅ Salvo!"}</div>`;
+  setTimeout(()=>{overlay.style.display="none";carregarReservas();modal.classList.remove("show");},1500);
 }
 
-/* ====== EXCLUIR ====== */
+/* === Exclusão === */
 async function excluir(data,nome){
   if(!confirm(`Excluir reserva de ${nome}?`))return;
-  overlay.style.display="flex";overlay.innerHTML="<div class='loader'></div><div>Excluindo...</div>";
+  overlay.innerHTML="<div class='loader'></div><div>Excluindo...</div>";
+  overlay.style.display="flex";
   const payload={acao:"excluirReserva",senha:ADMIN_SENHA,data,nome};
   const res=await fetch(GAS_ENDPOINT,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
-  const json=await res.json();alert(json.mensagem||"Concluído.");
-  overlay.style.display="none";carregarReservas();modal.classList.remove("show");
+  const json=await res.json();
+  overlay.innerHTML=`<div class='success'>${json.mensagem||"🗑️ Excluído!"}</div>`;
+  setTimeout(()=>{overlay.style.display="none";carregarReservas();modal.classList.remove("show");},1500);
 }
 
-/* ====== NAVEGAÇÃO ====== */
+/* === Navegação === */
 document.getElementById("prevMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()-1);renderCalendar();};
 document.getElementById("nextMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()+1);renderCalendar();};
 
-/* ====== INÍCIO ====== */
+/* === Inicialização === */
 window.onload=()=>carregarReservas();
 </script>
 </body>
